# pytemplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/config/: config.yaml
{{cookiecutter.package_name}}/tests/: conftest.py  test_config.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/: .editorconfig  .flake8  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
{{cookiecutter.repo_name}}/conf/: config.yaml
{{cookiecutter.repo_name}}/tests/: conftest.py  test_config.py  test_configs.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  main.py
